--- a/PhoneBook/PhoneBook/MainWindow.xaml
+++ b/PhoneBook/PhoneBook/MainWindow.xaml
@@ -17,7 +17,7 @@
         <TextBox x:Name="emailAddressTextBox" HorizontalAlignment="Left" Margin="240,313,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200"/>
         <Label Content="Company:" HorizontalAlignment="Center" Margin="0,336,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="companyTextBox" HorizontalAlignment="Left" Margin="240,362,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200"/>
-        <ListView x:Name="contactList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,33,0,0" SelectionChanged="contactList_SelectionChanged" Height="400" VerticalAlignment="Top" HorizontalAlignment="Left" Width="180" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Hidden">
+        <ListView x:Name="contactList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,33,0,0" SelectionChanged="contactList_SelectionChanged" Height="400" VerticalAlignment="Top" HorizontalAlignment="Left" Width="180" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Cursor="Hand">
             <ListView.View>
                 <GridView>
                     <GridView.ColumnHeaderContainerStyle>
@@ -55,8 +55,23 @@
         </ListView>
         <Ellipse x:Name="displayIcon" Height="128" Stroke="Black" Width="128" Margin="276,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" StrokeThickness="2" IsEnabled="False">
             <Ellipse.Fill>
-                <ImageBrush x:Name="displayIconImg"  ImageSource="images/default_icon.png" Stretch="Fill"/>
+                <ImageBrush x:Name="displayIconImg"  ImageSource="images/default_icon.png" Stretch="Fill" Opacity="1"/>
             </Ellipse.Fill>
+        </Ellipse>
+        <Ellipse x:Name="editIcon" Height="32" Stroke="Black" Width="32" Margin="372,106,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" StrokeThickness="2" IsEnabled="True" Cursor="Hand">
+            <Ellipse.Fill>
+                <ImageBrush x:Name="editIconImg"  ImageSource="images/edit_icon.png" Stretch="Fill"/>
+            </Ellipse.Fill>
+            <Ellipse.Style>
+                <Style TargetType="{x:Type Ellipse}">
+                    <Setter Property="Opacity" Value="1.0"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Opacity" Value="0.75"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Ellipse.Style>
         </Ellipse>
         <CheckBox x:Name="favouriteCheckBox" Content="Favourite" HorizontalAlignment="Left" Margin="208,385,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="searchTextBox" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="180" TextChanged="searchTextBox_TextChanged"/>
@@ -72,6 +87,7 @@
                 </Style>
             </TextBlock.Style>
         </TextBlock>
-        <Button x:Name="acceptButton" Content="Accept" Margin="290,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="100" Height="23" Click="acceptButton_Click" HorizontalAlignment="Left"/>
+        <Button x:Name="acceptButton" Content="Accept" Margin="350,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="80" Height="23" Click="acceptButton_Click" HorizontalAlignment="Left" Cursor="Hand"/>
+        <Button x:Name="cancelButton" Content="Cancel" Margin="250,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="80" Height="23" Click="cancelButton_Click" HorizontalAlignment="Left" Cursor="Hand"/>
     </Grid>
 </Window>
