--- a/PhoneBook/PhoneBook/MainWindow.xaml
+++ b/PhoneBook/PhoneBook/MainWindow.xaml
@@ -5,23 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PhoneBook"
         mc:Ignorable="d"
-        Title="PhoneBook" Height="480" Width="480" Loaded="mainWindow_Loaded" ResizeMode="NoResize">
+        Title="PhoneBook" Height="480" Width="480" ResizeMode="NoResize" Closing="mainWindow_Closing">
     <Grid Margin="0,0,0,-6" Width="480" Height="450">
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FF00F9FF"/>
+                <GradientStop Color="#FF0084FF" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="161*"/>
+            <ColumnDefinition Width="79*"/>
         </Grid.ColumnDefinitions>
         <Label Content="First name:" HorizontalAlignment="Left" Margin="208,140,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="firsNameTextBox" HorizontalAlignment="Left" Margin="240,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200" Grid.ColumnSpan="2"/>
-        <Label Content="Last name:" HorizontalAlignment="Center" Margin="0,190,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-        <TextBox x:Name="lastNameTextBox" HorizontalAlignment="Left" Margin="240,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="200" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="firsNameTextBox" HorizontalAlignment="Left" Margin="240,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200" Grid.ColumnSpan="3"/>
+        <Label Content="Last name:" HorizontalAlignment="Left" Margin="207,190,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <TextBox x:Name="lastNameTextBox" HorizontalAlignment="Left" Margin="240,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="200" Grid.ColumnSpan="3"/>
         <Label Content="Phone number:" HorizontalAlignment="Left" Margin="208,238,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="phoneNumberTextBox" HorizontalAlignment="Left" Margin="240,264,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="phoneNumberTextBox" HorizontalAlignment="Left" Margin="240,264,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200" Grid.ColumnSpan="3"/>
         <Label Content="Email address:" HorizontalAlignment="Left" Margin="208,287,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="emailAddressTextBox" HorizontalAlignment="Left" Margin="240,313,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200" Grid.ColumnSpan="2"/>
-        <Label Content="Company:" HorizontalAlignment="Center" Margin="0,336,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-        <TextBox x:Name="companyTextBox" HorizontalAlignment="Left" Margin="240,362,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200" Grid.ColumnSpan="2"/>
-        <ListView x:Name="contactList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,33,0,0" SelectionChanged="contactList_SelectionChanged" Height="400" VerticalAlignment="Top" HorizontalAlignment="Left" Width="180" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Cursor="Hand" Grid.ColumnSpan="2">
+        <TextBox x:Name="emailAddressTextBox" HorizontalAlignment="Left" Margin="240,313,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200" Grid.ColumnSpan="3"/>
+        <Label Content="Company:" HorizontalAlignment="Left" Margin="208,336,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <TextBox x:Name="companyTextBox" HorizontalAlignment="Left" Margin="240,362,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200" Grid.ColumnSpan="3"/>
+        <ListView x:Name="contactList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,33,0,0" SelectionChanged="contactList_SelectionChanged" Height="400" VerticalAlignment="Top" HorizontalAlignment="Left" Width="180" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Grid.ColumnSpan="2">
             <ListView.View>
                 <GridView>
                     <GridView.ColumnHeaderContainerStyle>
@@ -61,14 +68,29 @@
                 </ContextMenu>
             </ListView.ContextMenu>
         </ListView>
-        <Ellipse x:Name="displayIcon" Height="128" Stroke="Black" Width="128" Margin="276,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" StrokeThickness="2" IsEnabled="False" Grid.ColumnSpan="2">
+        <Ellipse x:Name="displayIcon" Height="128" Stroke="Black" Width="128" Margin="276,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" StrokeThickness="2" IsEnabled="False" Grid.ColumnSpan="3">
             <Ellipse.Fill>
                 <ImageBrush x:Name="displayIconImg"  ImageSource="images/default_icon.png" Stretch="Fill" Opacity="1"/>
             </Ellipse.Fill>
         </Ellipse>
-        <Ellipse x:Name="editIcon" Height="32" Stroke="Black" Width="32" Margin="372,106,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" StrokeThickness="2" IsEnabled="True" Cursor="Hand" Grid.ColumnSpan="2" MouseDown="editIcon_MouseDown">
+        <Ellipse x:Name="editIcon" Height="32" Stroke="Black" Width="32" Margin="50,106,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" StrokeThickness="2" IsEnabled="True" Cursor="Hand" MouseDown="editIcon_MouseDown" Grid.Column="2">
             <Ellipse.Fill>
                 <ImageBrush x:Name="editIconImg"  ImageSource="images/edit_icon.png" Stretch="Fill"/>
+            </Ellipse.Fill>
+            <Ellipse.Style>
+                <Style TargetType="{x:Type Ellipse}">
+                    <Setter Property="Opacity" Value="1.0"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Opacity" Value="0.75"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Ellipse.Style>
+        </Ellipse>
+        <Ellipse x:Name="removeIcon" Height="32" Stroke="Black" Width="32" Margin="276,106,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" StrokeThickness="2" IsEnabled="True" Cursor="Hand" Grid.ColumnSpan="2" MouseDown="removeIcon_MouseDown">
+            <Ellipse.Fill>
+                <ImageBrush x:Name="removeIconImg"  ImageSource="images/remove_icon.png" Stretch="Fill" Opacity="1"/>
             </Ellipse.Fill>
             <Ellipse.Style>
                 <Style TargetType="{x:Type Ellipse}">
@@ -95,7 +117,7 @@
                 </Style>
             </TextBlock.Style>
         </TextBlock>
-        <Button x:Name="acceptButton" Content="Accept" Margin="350,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="80" Height="23" Click="acceptButton_Click" HorizontalAlignment="Left" Cursor="Hand" Grid.ColumnSpan="2"/>
-        <Button x:Name="cancelButton" Content="Cancel" Margin="250,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="80" Height="23" Click="cancelButton_Click" HorizontalAlignment="Left" Cursor="Hand" Grid.ColumnSpan="2"/>
+        <Button x:Name="acceptButton" Content="Accept" Margin="28,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="80" Height="23" Click="acceptButton_Click" HorizontalAlignment="Left" Cursor="Hand" Grid.Column="2"/>
+        <Button x:Name="cancelButton" Content="Cancel" Margin="250,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="80" Height="23" Click="cancelButton_Click" HorizontalAlignment="Left" Cursor="Hand" Grid.ColumnSpan="3"/>
     </Grid>
 </Window>
