--- a/PhoneBook/PhoneBook/MainWindow.xaml
+++ b/PhoneBook/PhoneBook/MainWindow.xaml
@@ -13,11 +13,7 @@
                 <GradientStop Color="#FF0084FF" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition Width="161*"/>
-            <ColumnDefinition Width="79*"/>
-        </Grid.ColumnDefinitions>
+
         <Label Content="First name:" HorizontalAlignment="Left" Margin="208,140,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
         <TextBox x:Name="firsNameTextBox" HorizontalAlignment="Left" Margin="240,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="200" Grid.ColumnSpan="3"/>
         <Label Content="Last name:" HorizontalAlignment="Left" Margin="207,190,0,0" VerticalAlignment="Top" Grid.Column="1"/>
@@ -73,7 +69,7 @@
                 <ImageBrush x:Name="displayIconImg"  ImageSource="images/default_icon.png" Stretch="Fill" Opacity="1"/>
             </Ellipse.Fill>
         </Ellipse>
-        <Ellipse x:Name="editIcon" Height="32" Stroke="Black" Width="32" Margin="50,106,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" StrokeThickness="2" IsEnabled="True" Cursor="Hand" MouseDown="editIcon_MouseDown" Grid.Column="2">
+        <Ellipse x:Name="editIcon" Height="32" Stroke="Black" Width="32" Margin="372,106,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" StrokeThickness="2" IsEnabled="True" Cursor="Hand" MouseDown="editIcon_MouseDown">
             <Ellipse.Fill>
                 <ImageBrush x:Name="editIconImg"  ImageSource="images/edit_icon.png" Stretch="Fill"/>
             </Ellipse.Fill>
@@ -117,7 +113,7 @@
                 </Style>
             </TextBlock.Style>
         </TextBlock>
-        <Button x:Name="acceptButton" Content="Accept" Margin="28,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="80" Height="23" Click="acceptButton_Click" HorizontalAlignment="Left" Cursor="Hand" Grid.Column="2"/>
-        <Button x:Name="cancelButton" Content="Cancel" Margin="250,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="80" Height="23" Click="cancelButton_Click" HorizontalAlignment="Left" Cursor="Hand" Grid.ColumnSpan="3"/>
+        <Button x:Name="acceptButton" Content="Accept" Margin="348,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="80" Height="23" Click="acceptButton_Click" HorizontalAlignment="Left" Cursor="Hand"/>
+        <Button x:Name="cancelButton" Content="Cancel" Margin="252,407,0,0" VerticalAlignment="Top" RenderTransformOrigin="0,0.052" Width="80" Height="23" Click="cancelButton_Click" HorizontalAlignment="Left" Cursor="Hand"/>
     </Grid>
 </Window>
